--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Clean Blog Theme by Start Bootstrap"
+description: "Welcome to the Home page of the Soar Valley Metal Detecting Club"
 ---
 
 {% for post in paginator.posts %}
