--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "Contact"
-description: "Have questions? I have answers (maybe)."
+title: "News"
+description: "Latest news here!"
 header-img: "img/contact-bg.jpg"
 ---
 
