--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: "Welcome to the Home page of the Soar Valley Metal Detecting Club"
 <!-- Post Content -->
 <article>
 
-				Well, we know that the image on the left is a beautiful beach photographed on a sunny day. However, the real question is...
+				Well, we know that the image above is a beautiful beach photographed on a sunny day. However, the real question is...
 
 Do you want to lie on a deck chair and get a rather unhealthy suntan or would you prefer to arm yourself with a spade or trowel and dig it up to find hidden treasure?
 
